Add requirements for JSON schema.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ matrix:
     dist: xenial
   - os: windows
 
+install:
+  - pip install -r requiremetns.txt
+  - pip install .
+
 script:
 - cd schema
 - python TestValidate.py
