--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
 
-language: python
 matrix:
   include:
   - os: osx
     osx_image: xcode10.1
+    language: sh
+    python: "3.7"
+    # Perform the manual steps on osx to install python3 and activate venv
+    before_install:
+      - brew update
+      - brew upgrade python3
+      - python3 -m pip install virtualenv
+      - virtualenv .venv -p python3
+      - source .venv/bin/activate
   - os: linux
+    language: python
     dist: xenial
   - os: windows
+    language: sh
+    python: "3.7"
+    before_install:
+      - choco install python3
+      - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
 
 install:
-  - pip install -r requiremetns.txt
+  - pip install -r requirements.txt
   - pip install .
 
 script:
