--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,25 @@ matrix:
   - os: osx
     osx_image: xcode10.1
     language: sh
-    python: "3.7"
-    # Perform the manual steps on osx to install python3 and activate venv
+    env:
+      - TOXENV=py3
+      - HOMEBREW_NO_INSTALL_CLEANUP=1
+      - HOMEBREW_NO_ANALYTICS=1
+    before_cache:
+      # - brew cleanup
+      - rm -f "$HOME/Library/Caches/pip/log/debug.log"
+    cache:
+      directories:
+        # - "$HOME/Library/Caches/Homebrew"
+        - "$HOME/Library/Caches/pip"
+    addons:
+      homebrew:
+        # update: true
+        packages: python3
     before_install:
-      - brew update
-      - brew upgrade python3
-      - python3 -m pip install virtualenv
-      - virtualenv .venv -p python3
-      - source .venv/bin/activate
+      - python3 -m pip install --upgrade virtualenv
+      - virtualenv -p python3 --system-site-packages "$HOME/venv"
+      - source "$HOME/venv/bin/activate"
   - os: linux
     language: python
     dist: xenial
