Fix for pipenv setup on windows/osx.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ matrix:
     before_install:
       - choco install python3
       - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+      - python3 -m pip install pipenv
+      - pipenv shell
 
 install:
   - pipenv install
