--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
       - python3 -m pip install pipenv
   - os: linux
     language: python
+    python: "3.7"
     dist: xenial
   - os: windows
     language: sh
@@ -36,4 +37,4 @@ install:
   - pipenv install --dev
 
 script:
-- pipenv run pytest
+- pipenv run pytest -v
