--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
     language: sh
     python: "3.7"
     before_install:
-      - choco install python3
+      - choco install python3 --params "/InstallDir:C:\\Python"
       - export PATH="/c/Python:/c/Python/Scripts:$PATH"
       - python3 -m pip install pipenv
 
