Move schema to submodule.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ matrix:
       - python -m pip install pipenv
 
 install:
+  - git submodule update --init --recursive
   - pipenv install --dev
 
 script:
