--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,16 +10,22 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
         with:
           submodules: true
-      - uses: actions/setup-python@v1
+      - name: Setup python
+        uses: actions/setup-python@v1
         with:
           python-version: 3.7
-      - name: Install
+      - name: Upgrade pip
         run: |
           python -m pip install --upgrade pip
+      - name: Install pipenv
+        run: |
           python -m pip install pipenv
+      - name: Install project
+        run: |
           pipenv install --dev
       - name: Test
         run: |
