--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,15 +19,11 @@ jobs:
         with:
           python-version: 3.7
       - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
       - name: Install pipenv
-        run: |
-          python -m pip install pipenv
+        run: python -m pip install pipenv
       - name: Install project
-        run: |
-          pipenv install --dev
+        run: pipenv install --dev
       - name: Test
-        run: |
-          pipenv run pytest -v
+        run: pipenv run pytest -v
 
