--- a/libtk205/CMakeLists.txt
+++ b/libtk205/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-project(libtktest VERSION 0.1.0)
+project(libtktest)
 
 include(CTest)
 enable_testing()
