Remove hard-coded factory files; add autogeneration into build directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
     "MinSizeRel" "RelWithDebInfo")
 endif()
 
-add_custom_target(generate_cpp ALL pipenv run doit headers
-                               COMMAND pipenv run doit cpp
+# TODO: 'pipenv run doit' or 'doit' ?
+add_custom_target(generate_cpp ALL doit headers
+                               COMMAND doit cpp
                                WORKING_DIRECTORY "../schema-205")
 
 add_subdirectory(libtk205)
