--- a/.github/workflows/validate-and-build-with-poetry.yml
+++ b/.github/workflows/validate-and-build-with-poetry.yml
@@ -7,7 +7,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest] #, windows-latest]
         python-version: ["3.6", "3.7", "3.8", "3.9"]
     defaults:
       run:
@@ -40,8 +40,10 @@ jobs:
       #   run: |
       #     source $VENV
       #     poetry run doit
-      - name: Generate, build, and test libtk205
+      - name: generate and make libtk205
         run: |
           source $VENV
+          mkdir build
           cd build
+          poetry run cmake ..
           poetry run make
