Change pipenv to poetry.

--- a/libtk205/CMakeLists.txt
+++ b/libtk205/CMakeLists.txt
@@ -51,8 +51,8 @@ list(APPEND RS_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/build/cpp/ASHRAE205.cpp"
 )
 
 add_custom_target(generate_cpp ALL 
-                  COMMAND pipenv run doit headers
-                  COMMAND pipenv run doit cpp
+                  COMMAND poetry run doit headers
+                  COMMAND poetry run doit cpp
                   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../schema-205")
 
 # copy_directory will create the destination if it does not exist
