--- a/.github/workflows/validate-and-build-with-poetry.yml
+++ b/.github/workflows/validate-and-build-with-poetry.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies if cache does not exist
         run: poetry install
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-      # - name: Validate, build, and test
+      # - name: Validate, generate, and test
       #   run: |
       #     source $VENV
       #     poetry run doit
@@ -48,6 +48,14 @@ jobs:
           cd build
           poetry run cmake ..
           poetry run make
+      - name: test wd (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        working-directory: schema-205
+        run: |
+          source $VENV
+          poetry run doit headers
+          poetry run doit cpp
       - name: generate and build libtk205 (Windows)
         if: matrix.os == 'windows-latest'
         shell: bash
