--- a/.github/workflows/validate-and-build-with-poetry.yml
+++ b/.github/workflows/validate-and-build-with-poetry.yml
@@ -51,8 +51,9 @@ jobs:
       - name: test wd (Windows)
         if: matrix.os == 'windows-latest'
         shell: bash
-        working-directory: schema-205
         run: |
+          source $VENV
+          cd schema-205
           poetry run doit headers
           poetry run doit cpp
       - name: generate and build libtk205 (Windows)
