--- a/libtk205/CMakeLists.txt
+++ b/libtk205/CMakeLists.txt
@@ -9,6 +9,10 @@ set(JSON_BuildTests OFF CACHE INTERNAL "")
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/btwxt/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/json/single_include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/json/include)
+# Two "deeper" include directories necessary bc Valijson doesn't scope includes the same as everyone else
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/json/single_include/nlohmann)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/json/include/nlohmann)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/valijson/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/build/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/schema205/src)
