--- a/.github/workflows/validate-and-build-with-poetry.yml
+++ b/.github/workflows/validate-and-build-with-poetry.yml
@@ -57,4 +57,8 @@ jobs:
           poetry run cmake -B build
           poetry run cmake --build build --config Release
       - name: test
-        run: source $VENV && cd build && ctest
+        run: |
+          source $VENV
+          poetry run doit schema
+          cd build
+          ctest
