--- a/.github/workflows/validate-and-build-with-poetry.yml
+++ b/.github/workflows/validate-and-build-with-poetry.yml
@@ -59,6 +59,7 @@ jobs:
       - name: test
         run: |
           source $VENV
+          cd schema-205
           poetry run doit schema
-          cd build
+          cd ..\build
           ctest
