Separate cd steps so Lin/Win both work.

--- a/.github/workflows/validate-and-build-with-poetry.yml
+++ b/.github/workflows/validate-and-build-with-poetry.yml
@@ -61,5 +61,6 @@ jobs:
           source $VENV
           cd schema-205
           poetry run doit schema
-          cd ..\build
+          cd ..
+          cd build
           ctest
