--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,29 +5,38 @@ on: push
 jobs:
   build:
     name: Build
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.6", "3.7", "3.8", "3.9"]
+    defaults:
+      run:
+        shell: bash
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
-          submodules: true
-      - name: Setup python
-        uses: actions/setup-python@v1
+          submodules: recursive
+      - name: Setup python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.7
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-      - name: Install pipenv
-        run: python -m pip install pipenv
-      - name: Install project
-        run: pipenv install --dev
+          python-version: ${{ matrix.python-version }}
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.1.1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: Load cached venv if cache exists
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: poetry-cache-v3-${{ matrix.os }}-py${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies if cache does not exist
+        run: poetry install
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - name: Build and test
-        run: pipenv run doit
-      - name: Upload web content
-        uses: actions/upload-artifact@v2
-        with:
-          name: web-content-${{ matrix.os }}
-          path: build/web
+        run: |
+          source $VENV
+          poetry run doit
