Add clang-tidy static analysis to build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.14.0)
 project(toolkit-205)
 
+set(CMAKE_CXX_CLANG_TIDY 
+  clang-tidy;
+  -checks=-*,clang-analyzer-*,cppcoreguidelines-*
+  )
+
 # Set a default build type if none was specified
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   message(STATUS "Setting build type to 'Release' as none was specified.")
