--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "libtk205/vendor/valijson"]
 	path = libtk205/vendor/valijson
 	url = https://github.com/tristanpenman/valijson.git
+[submodule "libtk205/vendor/curlpp"]
+	path = libtk205/vendor/curlpp
+	url = https://github.com/jpbarrette/curlpp.git
