CMake fixes for dependency builds.

--- a/libtk205/CMakeLists.txt
+++ b/libtk205/CMakeLists.txt
@@ -17,20 +17,27 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/build/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/schema205/src)
 
-add_subdirectory(vendor/btwxt)
+file(GLOB RS_schemas "${PROJECT_SOURCE_DIR}/../schema-205/schema-source/*.schema.yaml")
 
-add_custom_target(generate_cpp ALL 
-                  COMMAND doit headers
-                  #COMMAND doit -s cpp
+foreach(schema IN LISTS RS_schemas)
+  string(REGEX REPLACE "${PROJECT_SOURCE_DIR}/../schema-205/schema-source/(.*).schema.yaml" "\\1" schema_name "${schema}")
+  list(APPEND RS_headers "${PROJECT_SOURCE_DIR}/../schema-205/build/include/${schema_name}.h")
+  list(APPEND RS_src "${PROJECT_SOURCE_DIR}/../schema-205/build/cpp/${schema_name}.cpp")
+endforeach()
+
+add_custom_command(OUTPUT "${RS_headers}" "${RS_src}"
+                  COMMAND poetry run doit headers cpp
+                  DEPENDS "${RS_schemas}"
                   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../schema-205")
 
 set (SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/libtk205.cpp"
-             "${CMAKE_CURRENT_SOURCE_DIR}/src/error_handling_tk205.cpp")
+             "${CMAKE_CURRENT_SOURCE_DIR}/src/error_handling_tk205.cpp"
+             "${RS_headers}"
+             "${RS_src}")
 
 message(STATUS "libtk205 sources: ${SOURCES}")
 
 add_library(libtk205 ${SOURCES})
-add_dependencies(libtk205 generate_cpp)
 
 add_subdirectory(vendor)
 
