--- a/libtk205/CMakeLists.txt
+++ b/libtk205/CMakeLists.txt
@@ -21,9 +21,10 @@ file(GLOB RS_schemas "${PROJECT_SOURCE_DIR}/../schema-205/schema-source/*.schema
 
 foreach(schema IN LISTS RS_schemas)
   string(REGEX REPLACE "${PROJECT_SOURCE_DIR}/../schema-205/schema-source/(.*).schema.yaml" "\\1" schema_name "${schema}")
-  list(APPEND RS_headers "${PROJECT_SOURCE_DIR}/../schema-205/build/include/${schema_name}.h")
-  list(APPEND RS_src "${PROJECT_SOURCE_DIR}/../schema-205/build/cpp/${schema_name}.cpp")
-  if (schema_name MATCHES "RS.*")
+  string(TOLOWER ${schema_name} schema_name)
+  list(APPEND rs_headers "${PROJECT_SOURCE_DIR}/../schema-205/build/include/${schema_name}.h")
+  list(APPEND rs_src "${PROJECT_SOURCE_DIR}/../schema-205/build/cpp/${schema_name}.cpp")
+  if (schema_name MATCHES "rs.*")
     list(APPEND factory_headers "${PROJECT_SOURCE_DIR}/../schema-205/build/include/${schema_name}_factory.h")
     list(APPEND factory_src "${PROJECT_SOURCE_DIR}/../schema-205/build/cpp/${schema_name}_factory.cpp")
   endif()
@@ -34,15 +35,15 @@ list(APPEND lib_headers "${CMAKE_CURRENT_SOURCE_DIR}/include/typeinfo_205.h"
                         "${CMAKE_CURRENT_SOURCE_DIR}/include/error_handling_tk205.h")
 #list(APPEND lib_src "${PROJECT_SOURCE_DIR}/../schema-205/build/cpp/libtk205.cpp")
 
-add_custom_command(OUTPUT ${RS_headers} ${RS_src} ${lib_headers} ${lib_src}
+add_custom_command(OUTPUT ${rs_headers} ${rs_src} ${lib_headers} ${lib_src}
                   COMMAND poetry run doit cpp
                   DEPENDS ${RS_schemas}
                   COMMENT "Generate libtk205 files from YAML schema"
                   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../schema-205")
 
 set (SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/error_handling_tk205.cpp"
-             "${RS_headers}"
-             "${RS_src}"
+             "${rs_headers}"
+             "${rs_src}"
              "${factory_headers}"
              "${factory_src}"
              "${lib_headers}"
