--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,6 +24,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Poetry
         run: curl -sSL https://install.python-poetry.org | python3 -
+      - name: Update PATH MacOS/Linux
+        if: ${{ matrix.os != 'Windows' }}
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Update PATH for Windows
+        if: ${{ matrix.os == 'Windows' }}
+        run: echo "$APPDATA\Python\Scripts" >> $GITHUB_PATH
       - name: Load cached venv if cache exists
         id: cached-poetry-dependencies
         uses: actions/cache@v2
