--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "tk205"
-version = "0.1.0"
+version = "1.0.0"
 description = ""
 authors = ["Open205"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 click = "*"
 jsonschema = "*"
 cbor2 = "*"
@@ -16,9 +16,10 @@ schema205 = { path = "schema-205", develop = true }
 
 [tool.poetry.dev-dependencies]
 pylint = "*"
-pytest = "*"
+pytest = "^7.1.3"
 markdown = "*"
 doit = "*"
+tomli = "2.0.1"
 gitpython = "*"
 
 [build-system]
