--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,25 +19,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Setup python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: bigladder/github-actions/setup-python-poetry@main
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Poetry
-        uses: snok/install-poetry@v1.3.1
-        with:
-          version: 1.2.2
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - name: Load cached venv if cache exists
-        id: cached-poetry-dependencies
-        uses: actions/cache@v3
-        with:
-          path: .venv
-          key: venv-${{ matrix.os }}-py${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies if cache does not exist
-        run: poetry install
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       - name: Build and test
         run: poetry run doit
       - name: Export libtk205 source
